# TODOList

./: .env.todolist  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose-tests.yaml  docker-compose.yaml  mypy.ini  nginx.conf  pyproject.toml
.github/workflow/: todolist.yaml
.github/workflows/: todolist.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/migrations/: 0001_initial.py  0002_tguser_status_alter_tguser_user_and_more.py  0003_tguser_selected_category_alter_tguser_status_and_more.py  0004_alter_tguser_user.py
bot/tg/: base_state.py  bot_dao.py  bot_session.py  bot_state.py  client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_last_login.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_comment_author.py  0002_goal.py  0003_remove_goal_is_deleted.py  0004_rename_author_comment_user_rename_author_goal_user.py  0005_alter_goal_category_alter_goal_description.py  0006_board_goalcategory_board_boardparticipant.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py  0009_alter_boardparticipant_board_and_more.py  0010_alter_boardparticipant_board_and_more.py
goals/models/: board.py  category.py  comment.py  dates_model_mixin.py  goal.py
goals/serializers/: board.py  category.py  comment.py  goal.py
goals/views/: board.py  category.py  comment.py  goal.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: user_test.py
tests/goals/: board_test.py  category_test.py  comment_test.py  (+1 more)
todolist/: settings.py  urls.py
(+1 files in other folders)
