[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Michael Rodionov <rodionovspb9618@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
drf-spectacular = "^0.26.1"
djangorestframework-simplejwt = "^5.2.2"
social-auth-app-django = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
